src/BoltonCup.Common/Components/BoltonCupImage/BoltonCupImage.razor.css
.edit-image-container {
    position: relative;
    cursor: pointer;
    overflow: hidden;
    display: inline-block;
}

.edit-image {
    opacity: 1;
    display: block;
    transition: .5s ease;
    backface-visibility: hidden;
}

.overlay-container {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    opacity: 0;
    transition: opacity .5s ease;
    cursor: pointer;
}

.edit-image-container:hover .overlay-container {
    opacity: 1;
}

